--- a/node-express-javascript/public/stylesheets/style.css
+++ b/node-express-javascript/public/stylesheets/style.css
@@ -1,10 +1,17 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	font:
+		14px "Lucida Grande",
+		Helvetica,
+		Arial,
+		sans-serif;
 }
 a {
-  color: #00B7FF;
+	color: #00b7ff;
 }
 .blocktext {
-  font-family: Courier New, Courier, monospace;
+	font-family:
+		Courier New,
+		Courier,
+		monospace;
 }
