--- a/node-express-typescript/Source/styles/style.less
+++ b/node-express-typescript/Source/styles/style.less
@@ -1,21 +1,14 @@
 @linkcolor: blue;
 
 body {
-	padding: 50px;
-	font:
-		14px "Lucida Grande",
-		Helvetica,
-		Arial,
-		sans-serif;
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-	color: @linkcolor;
+  color: @linkcolor
 }
 
 .blocktext {
-	font-family:
-		Courier New,
-		Courier,
-		monospace;
+  font-family: Courier New, Courier, monospace;
 }
